@@ -1,4 +1,4 @@
-var date_size = "2023-02-17";
+var date_size = "2023-02-19";
 
 var opt_size = {
 	"cc65": "-O",
@@ -42,4 +42,5 @@ var bench_size = {
 	"radix-sort": { size: [ 2305,2945,"C","T",4659,"R",2516, ], speed: [ 6394756,6592472,"C","T",7924337,"R",6561858, ] },
 	"shell-sort": { size: [ 1618,1797,"C",5575,2172,"R",1606, ], speed: [ 4513897,2337837,"C",1316330,3704984,"R",2458457, ] },
 	"heap-sort": { size: [ 1793,2211,"C",5660,2744,"R",1890, ], speed: [ 4957712,2478797,"C",1280269,5339768,"R",2336973, ] },
+	"eight-queens": { size: [ 1084,1067,593,5190,2649,1173,917, ], speed: [ 28729340,4725549,5565918,3047642,72651727,14030163,9766336, ] },
 };
