@@ -145,3 +145,10 @@
 "osdk-lcc65","heap-sort",2744,1661441,5339768,0
 "sdcc","heap-sort",2902,99752,331838,3
 "vbcc","heap-sort",1874,689638,2241279,0
+"cc65","eight-queens",1063,7945084,28143974,0
+"gcc-6502","eight-queens",1144,1446454,4352300,0
+"kickc","eight-queens",593,1741322,5565918,0
+"llvm-mos","eight-queens",4883,1049354,2999224,0
+"osdk-lcc65","eight-queens",2649,23357198,72651727,0
+"sdcc","eight-queens",1173,4450966,14030163,0
+"vbcc","eight-queens",910,2765966,8559402,0
