@@ -1,4 +1,4 @@
-var date_speed = "2023-02-17";
+var date_speed = "2023-02-19";
 
 var opt_size = {
 	"cc65": "-O",
@@ -42,4 +42,5 @@ var bench_speed = {
 	"radix-sort": { size: [ 2570,"T","C","T",4659,"R",2561, ], speed: [ 6022813,"T","C","T",7924337,"R",6506819, ] },
 	"shell-sort": { size: [ 1763,1949,"C",7241,2172,"R",1702, ], speed: [ 3707610,2227154,"C",1342419,3704984,"R",2045890, ] },
 	"heap-sort": { size: [ 2044,3049,"C",5438,2744,"R",1874, ], speed: [ 4042109,2388354,"C",1244309,5339768,"R",2241279, ] },
+	"eight-queens": { size: [ 1063,1144,593,4883,2649,1173,910, ], speed: [ 28143974,4352300,5565918,2999224,72651727,14030163,8559402, ] },
 };
