@@ -5,6 +5,11 @@ MOS6502 compiler benchmark ChangeLog
 Online results at: https://raxiss.com/compiler-benchmark/bench.html
 
 
+(2023-02-19)
+------------
+  * Improved mos6502vm run-time disassemby to stderr
+  * Added new examplr (eight-queens)
+
 (2023-02-17)
 ------------
   * Added sample 0xcafe to test binary litterals (i.e. 0b00000000).
@@ -14,7 +19,6 @@ Online results at: https://raxiss.com/compiler-benchmark/bench.html
 (2023-02-15)
 ------------
   * radix-sort sample fixed.
-
 
 (2023-02-14)
 ------------
